1998-02-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* swarm_rts_routines.[hm] (swarm_method_get_number_of_arguments):
	Remove.  Remove my_objc prefixes.  Change skip_argspec to
	return NULL when current type character is \0.

	* objectbase.h (val_t): Define.  Change declarations per 
	MessageProbe.h changes below.

	* MessageProbe.h: Include objectbase.h.
	Remove Imp types and use of Imp types.
	Remove probedMessage, argNum and argLabels. 
	arguments is now of type val_t.  
	Hide result flag is now boolean and named hideResultFlag (not hr).
	Remove setProbedMessage and setArg:ToObjectName. 
	Rename setArg:To: to setArg:ToString.
	hideResult accessors are boolean, as are isResultId and isArgumentId:
	Rename getArgNum to getArgCount.

	* MessageProbe.m:  Rewritten to use avcall library.

1998-02-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MessageProbe.m ([MessageProbe -_trueDynamicCallOn_:resultStorage:]):
	For now, abort(3) for USE_JAVA case where tkobjc_dynamicEval would
	otherwise be used.

1998-02-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (OBJECTS, HEADERS): Add Arguments.

	* Arguments.[hm]: New files.

1998-02-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* objectbase.h: Change header comment to objectbase.h.
	Include from swarmobject/ to objectbase/.

	* Makefile (install-headers):  Remove.

1998-01-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MessageProbe.m: Include tkobjc/common.h instead of tkobjc/control.h.
	Don't include tclObjc.h.

	* objectbase.h: In MesageProbe protocol, declare
	setArg:ToObjectName:.  Constify To: argument of setArg:To:.
	Constify second arugment to dynamicCallOn:resultStorage:.

	* SwarmObject.m ([SwarmObject -getIdName]): New method (return
	value of getInstanceName).

	* SwarmObject.h: Declare getIdName.

	* MessageProbe.m ([MessageProbe -createEnd], [MessageProbe
	-_setImp_:]): Replace accesses to imps with imp.IMPTYPE.
	([MessageProbe -createEnd]): New return category 3 for _C_ID, and