@@ -1,3 +1,11 @@
+1998-02-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* MessageProbe.m ([MessageProbe -dynamicCallOn:]): Add a version
+	for libffi.  Only use avcall if USE_AVCALL is defined.  The
+	internal functions for both versions of push_argument now take a
+	pointer because libffi uses pointers instead of values for
+	arguments.
+
 1998-02-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* swarm_rts_routines.[hm] (swarm_method_get_number_of_arguments):
